Use the correct spacing.

--- a/app/layout.css
+++ b/app/layout.css
@@ -16,6 +16,7 @@ body {
 #content {
   margin: auto;
   max-width: 40em;
+  padding: 0 24px 24px 24px;
 }
 
 #content button {
@@ -68,7 +69,7 @@ label {
 }
 
 p {
-  line-height: 150%;
+  line-height: 28px;
   margin: 16px 0;
 }
 
